WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286123
zomato.com: [macOS] Blinking cursor is cut off when signing in with email at 75% zoom scale
https://bugs.webkit.org/show_bug.cgi?id=286123
Summary
zomato.com: [macOS] Blinking cursor is cut off when signing in with email at ...
Gerald Squelart
Reported
2025-01-16 22:21:32 PST
When signing into Zomato with email, the blinking cursor is a dot than actually a line blinking. Steps to reproduce: 1. Navigate to Zomato.com on Safari 2. Click ‘Log In’ 3. Click ‘Continue with Email’ 4. Click in Email text box > blinking cursor is a ‘.’ The actual issue is that there's an opaque label *after* the input element, which can clip the caret at some zoom levels. Until the website fixes that (it should probably use the `placeholder` attribute), we'll introduce a quirk to ensure that the caret doesn't get clipped/hidden.
rdar://128962778
Attachments
Add attachment
proposed patch, testcase, etc.
Gerald Squelart
Comment 1
2025-01-16 22:31:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39179
EWS
Comment 2
2025-01-20 14:19:43 PST
Committed
289165@main
(80af29c993f8): <
https://commits.webkit.org/289165@main
> Reviewed commits have been landed. Closing PR #39179 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug