Add a quirk to zomato.com, to prevent hiding the caret in login-by-email https://bugs.webkit.org/show_bug.cgi?id=286123 rdar://128962778

Reviewed by Anne van Kesteren.

When trying to log in with an email, the <input> is followed by a <label>
that displays "Email" when the input is empty. (Similar to what a
'placeholder' attribute would do.) But that label has a white background,
which can hide the input's blinking caret at certain zoom levels.

To make sure the caret stays visible, this patch adds a quirk that
replaces that label's background color with a fully-transparent color.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsZomatoEmailLoginLabelQuirk const):
(WebCore::handleZomatoQuirks):
(WebCore::Quirks::determineRelevantQuirks):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):

Canonical link: https://commits.webkit.org/289165@main